xorg/*: minor documentation fixes
git-svn-id: https://cygwin-ports.svn.sourceforge.net/svnroot/cygwin-ports/ports/trunk@4798 e127d73d-b18e-4ae1-a744-a22e6a3ccd30

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 xsetmode
 ------------------------------------------
-Xorg Xinput device mode setter
+X.Org Xinput device mode setter
 
 Runtime requirements:
   cygwin-1.5.20-1
